Don't set video layers' videoGravity, which preserves aspect ratio and avoids a High Sierra graphics bug.

When a 720x1280 (portrait orientation) video is made fullscreen on
a 1440x900 DIP screen, this happens to its dimensions:

    720x1280 -[scale]-> 506.25x900 -[round]-> 506x900

When an AVSampleBufferDisplayLayer is created, its videoGravity currently gets
set to AVLayerVideoGravityResize, which doesn't preserve aspect ratio. It looks
like AVFoundation implements this with a transform (a small one in this case):

    <AVSampleBufferDisplayLayer:0x7f9099c1eca0;
        position = CGPoint (0 0);
        bounds = CGRect (0 0; 506 900);
        backgroundColor = (null);
        anchorPoint = CGPoint (0 0)
    >
        <AVSampleBufferDisplayLayerContentLayer:0x7f9099c82940;
            position = CGPoint (253 450);
            bounds = CGRect (0 0; 506 900);
            masksToBounds = YES;
            sublayerTransform = CATransform3D (1 0 0 0; 0 1.00049 0 0; 0 0 1 0; 0 0 0 1)
        >
            <!-- snip -->

Under certain conditions, this transform triggers a macOS bug with low
power detachment where the video's x position changes rapidly each frame
as long as the window stays in detached mode. I've been able to make it
happen when:

- The machine is a MacBook Pro.
- The OS is at least 10.13.
- The display is set to native 2x resolution ("Looks like 1440x900").
- The machine is running on integrated graphics if it has dual graphics.

A recording of the issue is attached to the crbug.

As far as I can tell, this code never *intends* to distort the video through
the layer's bounds — CSS transforms, for instance, get expressed as layer
transforms. The default videoGravity of AVLayerVideoGravityResizeAspect, which
preserves aspect ratio, seems correct, and using it makes the funky transform,
and the graphics bug, go away.

Bug: 792632
Change-Id: I8b149606cbccb6033c36d3ad400f7a63a4d462ce